cmd/network-console-collector/resources/openshift/prometheus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: network-console-prometheus
    app.kubernetes.io/part-of: network-console
    app.kubernetes.io/component: metrics
  name: network-console-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: network-console-prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: network-console-prometheus
        app.kubernetes.io/part-of: network-console
        app.kubernetes.io/component: metrics
    spec:
      containers:
      - args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus/
        - --web.config.file=/etc/prometheus/web-config.yml
        image: quay.io/prometheus/prometheus:v2.42.0
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        name: prometheus-server
        volumeMounts:
        - mountPath: /etc/prometheus
          name: prometheus-config
        - mountPath: /prometheus
          name: prometheus-storage-volume
        - mountPath: /etc/tls/openshift
          name: openshift-service-ca
      serviceAccount: network-console-prometheus
      serviceAccountName: network-console-prometheus
      volumes:
      - configMap:
          defaultMode: 420
          name: prometheus-server-config
        name: prometheus-config
      - emptyDir: {}
        name: prometheus-storage-volume
      - configMap:
          defaultMode: 420
          name: openshift-service-ca
        name: openshift-service-ca
---
apiVersion: v1
kind: Service
metadata:
  name: network-console-prometheus
  labels:
    app.kubernetes.io/part-of: network-console
    app.kubernetes.io/name: network-console-prometheus
spec:
  ports:
  - name: prometheus
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/name: network-console-prometheus
    app.kubernetes.io/component: metrics
  type: ClusterIP
