cmd/network-console-collector/resources/openshift/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: network-console
    app.kubernetes.io/name: network-console-collector
  name: network-console-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: network-console
      app.kubernetes.io/name: network-console-collector
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: network-console
        app.kubernetes.io/name: network-console-collector
        app.kubernetes.io/component: server
    spec:
      serviceAccountName: network-console-collector
      containers:
      - name: network-console
        image: quay.io/ckruse/network-console-collector:latest
        imagePullPolicy: Always
        args:
          - -listen=127.0.0.1:8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
        volumeMounts:
        - mountPath: /etc/messaging/
          name: skupper-local-client
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
      - name: oauth-proxy
        image: quay.io/openshift/origin-oauth-proxy:4.14.0
        imagePullPolicy: Always
        args:
        - --https-address=:8443
        - --provider=openshift
        - --openshift-service-account=network-console-collector
        - --upstream=http://127.0.0.1:8080
        - --tls-cert=/etc/tls/proxy-certs/tls.crt
        - --tls-key=/etc/tls/proxy-certs/tls.key
        - --cookie-secret=SECRET
        - -skip-auth-regex=^/metrics
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /etc/tls/proxy-certs/
          name: network-console-certs
      volumes:
      - name: network-console-certs
        secret:
          defaultMode: 420
          secretName: network-console-certs
      - name: skupper-local-client
        secret:
          defaultMode: 420
          secretName: skupper-local-client
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: network-console-certs
  labels:
    app.kubernetes.io/part-of: network-console
    app.kubernetes.io/name: network-console-collector
  name: network-console-collector
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/name: network-console-collector
    app.kubernetes.io/component: server
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/part-of: network-console
    app.kubernetes.io/name: network-console
  name: network-console
spec:
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: https
  to:
    kind: Service
    name: network-console-collector
    weight: 100
